...
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/toolbar">

                <ImageButton
                    android:id="@+id/backBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/round_button"
                    android:contentDescription="@string/back"
...
                    android:minWidth="50dp"
                    android:minHeight="50dp"
                    android:scaleType="center"
                    android:src="@drawable/help_icon" />

                <ImageButton
                    android:id="@+id/homeBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/round_button"
...

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <Button
        android:id="@+id/btnCancelBooking"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="37dp"
        android:layout_marginBottom="9dp"
        android:text="@string/deleteButton"
        app:layout_constraintBottom_toTopOf="@+id/btnConfirm"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnChangeTimeOver"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
...
        app:layout_constraintBottom_toBottomOf="@+id/btnChangeTimeOver"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout2" />

    <EditText
        android:id="@+id/editTxtNote"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginTop="20dp"
        android:autofillHints="Note"
        android:ems="10"
        android:hint="@string/note_edit_text"
...
