...
                    android:contentDescription="@string/helpImg"
                    android:minWidth="32dp"
                    android:src="@drawable/help_icon"
                    tools:ignore="TouchTargetSizeCheck" />

                <Button
                    android:id="@+id/bookingsButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/bookings"
                    android:textSize="22sp"
                    tools:ignore="VisualLintButtonSize,DuplicateSpeakableTextCheck" />
...
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView" />

    <Button
        android:id="@+id/search_by_category_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="60dp"
        android:text="@string/searchCategory"
        android:layout_marginTop="30dp"
        android:textSize="24sp"
...
